添加动态路由

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,7 @@
-* {
-    margin: 0;
-    padding: 0;
+html,
+body,
+#app,
+.ant-layout {
+    height: 100%;
 }
 
-body {
-    background-color: #ccc;
-}
