--- a/src/index.scss
+++ b/src/index.scss
@@ -5,3 +5,19 @@ body,
     height: 100%;
 }
 
+.ant-layout-content {
+    position: relative;
+}
+
+.loading-wrapper {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    .ant-spin-dot {
+        margin: 0 auto;
+    }
+    .ant-spin-text {
+        margin-top: 10px;
+    }
+}
