--- a/src/components/Root/index.scss
+++ b/src/components/Root/index.scss
@@ -1,3 +1,22 @@
+html,
+body,
+#app,
+.ant-layout {
+    height: 100%;
+}
+
+.root-container {
+    position: relative;
+    padding-top: 64px;
+    .ant-layout-header {
+        position: fixed;
+        top: 0;
+        width: 100%;
+        padding: 0 30;
+        background-color: #fff;
+    }
+}
+
 .logo {
     height: 32px;
     background: #333;
