--- a/src/components/Root/index.scss
+++ b/src/components/Root/index.scss
@@ -19,7 +19,8 @@ body,
 
 .logo {
     height: 32px;
-    background: #333;
-    border-radius: 6px;
+    line-height: 32px;
     margin: 16px;
+    border-radius: 6px;
+    background: #333;
 }
