--- a/src/index.ejs
+++ b/src/index.ejs
@@ -10,7 +10,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="full-screen" content="yes">
     <meta name="x5-fullscreen" content="true">
-    <title>demo</title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 
 <body>
