优化代码分割逻辑

--- a/src/components/Root/index.scss
+++ b/src/components/Root/index.scss
@@ -23,7 +23,10 @@ body,
     line-height: 32px;
     margin: 16px;
     border-radius: 6px;
-    background: #333;
+    background: rgba(255,255,255,.2);
     color: #fff;
     text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
