--- a/src/containers/Header/index.scss
+++ b/src/containers/Header/index.scss
@@ -1,7 +1,8 @@
-.ant-dropdown-link {
+.link {
   height: 100%;
   padding: 0 12px;
   cursor: pointer;
+
   &:hover {
     background-color: #e6f7ff;
   }
