--- a/src/containers/Root/index.scss
+++ b/src/containers/Root/index.scss
@@ -1,18 +1,18 @@
 .logo {
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 6px;
+  color: #fff;
   height: 32px;
   line-height: 32px;
   margin: 16px;
-  border-radius: 6px;
-  background: rgba(255, 255, 255, .2);
-  color: #fff;
-  text-align: center;
-  white-space: nowrap;
   overflow: hidden;
+  text-align: center;
   text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .content {
-  padding: 30px;
   background: #f0f0f0;
   overflow: auto;
+  padding: 30px;
 }
