--- a/src/containers/Root/index.scss
+++ b/src/containers/Root/index.scss
@@ -1,18 +1,18 @@
 .logo {
-  background: rgba(255, 255, 255, 0.2);
-  border-radius: 6px;
-  color: #fff;
   height: 32px;
-  line-height: 32px;
   margin: 16px;
   overflow: hidden;
+  color: #fff;
+  line-height: 32px;
+  white-space: nowrap;
   text-align: center;
   text-overflow: ellipsis;
-  white-space: nowrap;
+  background: rgba(255, 255, 255, .2);
+  border-radius: 6px;
 }
 
 .content {
-  background: #f0f0f0;
-  overflow: auto;
   padding: 30px;
+  overflow: auto;
+  background: #f0f0f0;
 }
